--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,15 @@ authors = ["Hamza Dhedhi <hamzadhedhi494@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.12"
+fastapi = "^0.111.0"
+uvicorn = {extras = ["standard"], version = "^0.29.0"}
+sqlmodel = "^0.0.18"
+mypy = "^1.10.0"
+psycopg2-binary = "^2.9.9"
 
+[tool.poetry.scripts]
+dev = "py_02_expense_tracker.main:start"
 
 [build-system]
 requires = ["poetry-core"]
